client/src/App.css
@media print {
	.no-print,
	.no-print * {
		display: none !important;
	}
}

/*
	HEADER
*/
.bg-dark {
	background-color: #ba1f33 !important;
}

.navbar {
	height: 64px;
}

.navbar-dark .navbar-nav .nav-link {
	color: #fff05c !important;
	/* font-weight: bold; */
}

.navbar-dark .navbar-nav .nav-link:hover {
	font-weight: bold;
}

.navbar-dark .navbar-brand {
	color: #fff05c !important;
	font-weight: bold;
}

.navbar-nav .dropdown-menu {
	background-color: #ba1f33 !important;
}

/*
	HOME_PAGE
*/
.HomePage {
	margin-top: 20px;
}

.HomePage .today-menu-title {
	margin-bottom: 20px;
}

.MenuGridItem {
	display: flex;
	background-color: #f4f1de;
	border-radius: 4px;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
	transition: 0.3s;
	padding: 8px;
	flex-shrink: 0;
}

.MenuGridItem h6 {
	color: #f58c38;
	font-weight: bold;
}

.MenuGridItem:hover {
	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

.MenuGridItem img {
	width: 148px;
	height: 90px;
	padding-right: 16px;
}

.MenuGridItemContent {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	width: 100%;
}

.MenuGridItemContent div {
	display: flex;
	justify-content: space-between;
}

.badge-warning {
	background-color: #fff05c;
	color: #595959;
}

